--- a/PaymentDemo/nbproject/private/private.properties
+++ b/PaymentDemo/nbproject/private/private.properties
@@ -1,11 +1,11 @@
-deploy.ant.properties.file=C:\\Users\\luong\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
-file.reference.sqljdbc4.jar=E:\\Project_Mau\\sqljdbc4-3.0.jar
+deploy.ant.properties.file=C:\\Users\\LuongDz\\AppData\\Roaming\\NetBeans\\8.2\\tomcat90.properties
+file.reference.sqljdbc4.jar=C:\\Users\\LuongDz\\Documents\\NetBeansProjects\\ProjectSemIV\\sqljdbc4-3.0.jar
 j2ee.platform.is.jsr109=true
 j2ee.server.domain=C:/Users/luong/AppData/Roaming/NetBeans/8.2/config/GF_4.1.1/domain1
-j2ee.server.home=E:/apache-tomcat-8.5.79-windows-x64/apache-tomcat-8.5.79
-j2ee.server.instance=tomcat80:home=E:\\apache-tomcat-8.5.79-windows-x64\\apache-tomcat-8.5.79
+j2ee.server.home=D:/apache-tomcat-9.0.64
+j2ee.server.instance=tomcat90:home=D:\\apache-tomcat-9.0.64
 j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=C:\\Users\\luong\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\LuongDz\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
